// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Component Should Render the default component 1`] = `
<div>
  <div
    class="awesomemotive-settings-container"
  >
    <div
      class="awesomemotive-settings-form-inputs"
    >
      <div
        class="components-flex components-input-control em5sgkm7 css-18gj5cw-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <label
            class="components-truncate components-text components-input-control__label em5sgkm4 css-1790joj-View-Text-sx-Base-BaseLabel-labelMargin em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
            for="awesomemotive-settings-form-input-no-of-rows"
          >
            No of rows
          </label>
        </div>
        <div
          class="components-input-control__container css-1t6cb2b-Container-containerDisabledStyles-containerWidthStyles em5sgkm6"
        >
          <input
            class="components-input-control__input css-gzm6eu-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
            id="awesomemotive-settings-form-input-no-of-rows"
            type="number"
            value="5"
          />
          <div
            aria-hidden="true"
            class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
          />
        </div>
      </div>
    </div>
    <div
      class="awesomemotive-settings-form-inputs"
    >
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper ej5x27r4"
      >
        <div
          class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
        >
          <span
            class="components-form-toggle"
          >
            <input
              aria-describedby="inspector-toggle-control-0__help"
              class="components-form-toggle__input"
              id="inspector-toggle-control-0"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-0"
          >
            Human Readable Date
          </label>
        </div>
        <p
          class="components-base-control__help css-v0euhr-StyledHelp-deprecatedMarginHelp ej5x27r1"
          id="inspector-toggle-control-0__help"
        >
          Timestamp displayed
        </p>
      </div>
    </div>
    <div
      class="awesomemotive-settings-form-inputs"
    >
      <h2>
        Email List:
      </h2>
      <div
        class="awesomemotive-settings-form-input-inner"
      >
        <div
          class="awesomemotive-settings-form-input-repeater"
          id="awesomemotive-settings-form-input-repeater1"
        >
          <div
            class="awesomemotive-settings-form-input-control"
          >
            <div
              class="components-flex components-input-control em5sgkm7 css-18gj5cw-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <label
                  class="components-truncate components-text components-input-control__label em5sgkm4 css-1790joj-View-Text-sx-Base-BaseLabel-labelMargin em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Text"
                  for="email_1"
                >
                  Email 1
                </label>
              </div>
              <div
                class="components-input-control__container css-1t6cb2b-Container-containerDisabledStyles-containerWidthStyles em5sgkm6"
              >
                <input
                  class="components-input-control__input css-gzm6eu-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                  id="email_1"
                  name="email"
                  placeholder="Enter email address.."
                  required=""
                  type="email"
                  value="test@test.com"
                />
                <div
                  aria-hidden="true"
                  class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                />
              </div>
            </div>
          </div>
          <div
            class="awesomemotive-settings-form-input-trash-icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 5h-5.7c0-1.3-1-2.3-2.3-2.3S9.7 3.7 9.7 5H4v2h1.5v.3l1.7 11.1c.1 1 1 1.7 2 1.7h5.7c1 0 1.8-.7 2-1.7l1.7-11.1V7H20V5zm-3.2 2l-1.7 11.1c0 .1-.1.2-.3.2H9.1c-.1 0-.3-.1-.3-.2L7.2 7h9.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="awesomemotive-settings-add-inputs"
          data-testid="awesomemotive-settings-add-inputs"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Settings Component Should add multiple emails and check if node exists 1`] = `
<div>
  <div
    class="awesomemotive-settings-container"
  >
    <div
      class="awesomemotive-settings-form-inputs"
    >
      <div
        class="components-flex components-input-control em5sgkm7 css-18gj5cw-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <label
            class="components-truncate components-text components-input-control__label em5sgkm4 css-1790joj-View-Text-sx-Base-BaseLabel-labelMargin em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Text"
            for="awesomemotive-settings-form-input-no-of-rows"
          >
            No of rows
          </label>
        </div>
        <div
          class="components-input-control__container css-1t6cb2b-Container-containerDisabledStyles-containerWidthStyles em5sgkm6"
        >
          <input
            class="components-input-control__input css-gzm6eu-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
            id="awesomemotive-settings-form-input-no-of-rows"
            type="number"
            value="5"
          />
          <div
            aria-hidden="true"
            class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
          />
        </div>
      </div>
    </div>
    <div
      class="awesomemotive-settings-form-inputs"
    >
      <div
        class="components-base-control components-toggle-control css-wdf2ti-Wrapper ej5x27r4"
      >
        <div
          class="components-base-control__field css-10urnh1-StyledField-deprecatedMarginField ej5x27r3"
        >
          <span
            class="components-form-toggle"
          >
            <input
              aria-describedby="inspector-toggle-control-1__help"
              class="components-form-toggle__input"
              id="inspector-toggle-control-1"
              type="checkbox"
            />
            <span
              class="components-form-toggle__track"
            />
            <span
              class="components-form-toggle__thumb"
            />
          </span>
          <label
            class="components-toggle-control__label"
            for="inspector-toggle-control-1"
          >
            Human Readable Date
          </label>
        </div>
        <p
          class="components-base-control__help css-v0euhr-StyledHelp-deprecatedMarginHelp ej5x27r1"
          id="inspector-toggle-control-1__help"
        >
          Timestamp displayed
        </p>
      </div>
    </div>
    <div
      class="awesomemotive-settings-form-inputs"
    >
      <h2>
        Email List:
      </h2>
      <div
        class="awesomemotive-settings-form-input-inner"
      >
        <div
          class="awesomemotive-settings-form-input-repeater"
          id="awesomemotive-settings-form-input-repeater1"
        >
          <div
            class="awesomemotive-settings-form-input-control"
          >
            <div
              class="components-flex components-input-control em5sgkm7 css-18gj5cw-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <label
                  class="components-truncate components-text components-input-control__label em5sgkm4 css-1790joj-View-Text-sx-Base-BaseLabel-labelMargin em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Text"
                  for="email_1"
                >
                  Email 1
                </label>
              </div>
              <div
                class="components-input-control__container css-1t6cb2b-Container-containerDisabledStyles-containerWidthStyles em5sgkm6"
              >
                <input
                  class="components-input-control__input css-gzm6eu-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                  id="email_1"
                  name="email"
                  placeholder="Enter email address.."
                  required=""
                  type="email"
                  value="test@test.com"
                />
                <div
                  aria-hidden="true"
                  class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                />
              </div>
            </div>
          </div>
          <div
            class="awesomemotive-settings-form-input-trash-icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 5h-5.7c0-1.3-1-2.3-2.3-2.3S9.7 3.7 9.7 5H4v2h1.5v.3l1.7 11.1c.1 1 1 1.7 2 1.7h5.7c1 0 1.8-.7 2-1.7l1.7-11.1V7H20V5zm-3.2 2l-1.7 11.1c0 .1-.1.2-.3.2H9.1c-.1 0-.3-.1-.3-.2L7.2 7h9.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="awesomemotive-settings-form-input-repeater"
          id="awesomemotive-settings-form-input-repeater2"
        >
          <div
            class="awesomemotive-settings-form-input-control"
          >
            <div
              class="components-flex components-input-control em5sgkm7 css-18gj5cw-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <label
                  class="components-truncate components-text components-input-control__label em5sgkm4 css-1790joj-View-Text-sx-Base-BaseLabel-labelMargin em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Text"
                  for="email_2"
                >
                  Email 2
                </label>
              </div>
              <div
                class="components-input-control__container css-1t6cb2b-Container-containerDisabledStyles-containerWidthStyles em5sgkm6"
              >
                <input
                  class="components-input-control__input css-gzm6eu-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                  id="email_2"
                  name="email"
                  placeholder="Enter email address.."
                  required=""
                  type="email"
                  value="test2@test.com"
                />
                <div
                  aria-hidden="true"
                  class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                />
              </div>
            </div>
          </div>
          <div
            class="awesomemotive-settings-form-input-trash-icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 5h-5.7c0-1.3-1-2.3-2.3-2.3S9.7 3.7 9.7 5H4v2h1.5v.3l1.7 11.1c.1 1 1 1.7 2 1.7h5.7c1 0 1.8-.7 2-1.7l1.7-11.1V7H20V5zm-3.2 2l-1.7 11.1c0 .1-.1.2-.3.2H9.1c-.1 0-.3-.1-.3-.2L7.2 7h9.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="awesomemotive-settings-form-input-repeater"
          id="awesomemotive-settings-form-input-repeater3"
        >
          <div
            class="awesomemotive-settings-form-input-control"
          >
            <div
              class="components-flex components-input-control em5sgkm7 css-18gj5cw-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <label
                  class="components-truncate components-text components-input-control__label em5sgkm4 css-1790joj-View-Text-sx-Base-BaseLabel-labelMargin em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Text"
                  for="email_3"
                >
                  Email 3
                </label>
              </div>
              <div
                class="components-input-control__container css-1t6cb2b-Container-containerDisabledStyles-containerWidthStyles em5sgkm6"
              >
                <input
                  class="components-input-control__input css-gzm6eu-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                  id="email_3"
                  name="email"
                  placeholder="Enter email address.."
                  required=""
                  type="email"
                  value="test3@test.com"
                />
                <div
                  aria-hidden="true"
                  class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                />
              </div>
            </div>
          </div>
          <div
            class="awesomemotive-settings-form-input-trash-icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 5h-5.7c0-1.3-1-2.3-2.3-2.3S9.7 3.7 9.7 5H4v2h1.5v.3l1.7 11.1c.1 1 1 1.7 2 1.7h5.7c1 0 1.8-.7 2-1.7l1.7-11.1V7H20V5zm-3.2 2l-1.7 11.1c0 .1-.1.2-.3.2H9.1c-.1 0-.3-.1-.3-.2L7.2 7h9.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="awesomemotive-settings-form-input-repeater"
          id="awesomemotive-settings-form-input-repeater4"
        >
          <div
            class="awesomemotive-settings-form-input-control"
          >
            <div
              class="components-flex components-input-control em5sgkm7 css-18gj5cw-View-Flex-sx-Base-sx-Items-ItemsColumn-Root-rootLabelPositionStyles em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item em5sgkm3 css-1fmchc6-View-Item-sx-Base-LabelWrapper em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <label
                  class="components-truncate components-text components-input-control__label em5sgkm4 css-1790joj-View-Text-sx-Base-BaseLabel-labelMargin em57xhy0"
                  data-wp-c16t="true"
                  data-wp-component="Text"
                  for="email_4"
                >
                  Email 4
                </label>
              </div>
              <div
                class="components-input-control__container css-1t6cb2b-Container-containerDisabledStyles-containerWidthStyles em5sgkm6"
              >
                <input
                  class="components-input-control__input css-gzm6eu-Input-dragStyles-fontSizeStyles-sizeStyles em5sgkm5"
                  id="email_4"
                  name="email"
                  placeholder="Enter email address.."
                  required=""
                  type="email"
                  value="test4@test.com"
                />
                <div
                  aria-hidden="true"
                  class="components-input-control__backdrop css-1gb9p1j-BackdropUI-backdropFocusedStyles em5sgkm2"
                />
              </div>
            </div>
          </div>
          <div
            class="awesomemotive-settings-form-input-trash-icon"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 5h-5.7c0-1.3-1-2.3-2.3-2.3S9.7 3.7 9.7 5H4v2h1.5v.3l1.7 11.1c.1 1 1 1.7 2 1.7h5.7c1 0 1.8-.7 2-1.7l1.7-11.1V7H20V5zm-3.2 2l-1.7 11.1c0 .1-.1.2-.3.2H9.1c-.1 0-.3-.1-.3-.2L7.2 7h9.6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="awesomemotive-settings-add-inputs"
          data-testid="awesomemotive-settings-add-inputs"
        >
          <svg
            aria-hidden="true"
            focusable="false"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
